# trading-bot

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .mcp.json  .tiltignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.dev.debug  Makefile  README.md  REALTIME_MONITORING_GUIDE.md  STRATEGY_VALIDATION_GUIDE.md  TRADING_SYSTEM_GUIDE.md  Tiltfile  TradingBot.sln  TradingBot.slnx  app_makefile  claude.md  go.mod  go.sum  openapi.yaml  pyproject.toml  skills-lock.json  tools.go
.aspire/: settings.json
.claude/: settings.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v2.0-MILESTONE-AUDIT.md  v4.0-MILESTONE-AUDIT.md
TradingBot.ApiService/: HistoricalData.http  Program.cs  RealTimeTrading.http  ServiceCollectionExtensions.cs  StrategyValidation.http  TradingBot.ApiService.csproj  TradingBot.ApiService.http  appsettings.Development.json  appsettings.json
TradingBot.ApiService.Tests/: TradingBot.ApiService.Tests.csproj
TradingBot.AppHost/: AppHost.cs  TradingBot.AppHost.csproj
TradingBot.Dashboard/: nuxt.config.ts  package-lock.json  package.json
TradingBot.Mobile/: README.md  pubspec.yaml
TradingBot.ServiceDefaults/: Extensions.cs
TradingBot.Web/: Program.cs  TradingBot.Web.csproj  WeatherApiClient.cs  package-lock.json  package.json  tailwind.config.js
configs/: config.yaml
dashboard/: nuxt.config.ts  package-lock.json  package.json
dca/: _fake_client.py  cli.py  config.py  dca.py  exchange.py  scheduler.py  types.py
docs/: dapr.md  dca-strategy.md  ent-go.md  (+2 more)
(+1057 files in other folders)
