[package]
name = "trading-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros", "time"] }
chrono = "0.4"
hyperliquid_rust_sdk = "0.6"
ethers = "2"

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
